--- a/main.html
+++ b/main.html
@@ -530,7 +530,7 @@
                         <li class="flex items-center">
                             <a href="https://maps.app.goo.gl/jWJLFDQN3BqtZ9Tk8" target="_blank" rel="noopener noreferrer" class="flex items-center text-gray-400 hover:text-white transition">
                                 <i class="fas fa-map-marker-alt mr-2"></i>
-                                <span>#xyz, St. 51 Corner xyz, BKK1, Phnom Penh</span>
+                                <span>#229, St. 51 Corner 322, BKK1, Phnom Penh</span>
                             </a>
                         </li>
                         <li class="flex items-center">
