--- a/main.html
+++ b/main.html
@@ -76,7 +76,7 @@
 <body class="bg-gray-50">
     <!-- Header -->
     <header class="bg-white shadow-md sticky top-0 z-50">
-        <div class="container mx-auto px-0 py-2 flex justify-between items-center">
+        <div class="container mx-auto px-4 py-2 flex justify-between items-center">
             <div class="flex items-center">
                 <button onclick="window.location.href='#'" class="focus:outline-none">
                     <img src="https://i.imgur.com/HHXhMZL.png" alt="Logo" class="h-16 mr-2 hover:opacity-90 transition-opacity">
@@ -99,7 +99,7 @@
             <a href="#" class="block py-2 text-gray-800 font-medium border-b border-gray-100" data-target="one-bedroom">1-Bedroom</a>
             <a href="#" class="block py-2 text-gray-600 font-medium border-b border-gray-100" data-target="two-bedroom">2-Bedroom</a>
             <a href="#" class="block py-2 text-gray-600 font-medium border-b border-gray-100" data-target="three-bedroom">3-Bedroom</a>
-            <a href="#" class="block py-2 text-blue-500 font-medium">
+            <a href="#contact" class="block py-2 text-green-500 font-medium">
                 <i class="fas fa-phone-alt mr-2"></i> Contact Us
             </a>
         </div>
