--- a/main.html
+++ b/main.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Find Your Perfect Home | The Sokhom Residence</title>
+    <title>Your Future Home | The Sokhom Residence</title>
+    <link rel="icon" type="image/x-icon" href="https://i.imgur.com/YRJDRRD.jpeg">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
