--- a/main.html
+++ b/main.html
@@ -147,7 +147,7 @@
                         </li>
                     </ul>
                     <div class="flex items-center">
-                        <span class="text-2xl font-bold text-green-600">$800 - $1,000/month</span>
+                        <span class="text-2xl font-bold text-green-600">Contact for price inquiry</span>
                         <span class="ml-4 text-sm text-gray-500">*Prices may vary</span>
                     </div>
                 </div>
@@ -211,7 +211,7 @@
                         </li>
                     </ul>
                     <div class="flex items-center">
-                        <span class="text-2xl font-bold text-blue-600">$1,200 - $2,200/month</span>
+                        <span class="text-2xl font-bold text-blue-600">Contact for price inquiry</span>
                         <span class="ml-4 text-sm text-gray-500">*Prices may vary</span>
                     </div>
                 </div>
@@ -332,7 +332,7 @@
                         </li>
                     </ul>
                     <div class="flex items-center">
-                        <span class="text-2xl font-bold text-blue-600">$3,300 - $3,500/month</span>
+                        <span class="text-2xl font-bold text-blue-600">Contact for price inquiry</span>
                         <span class="ml-4 text-sm text-gray-500">*Prices may vary</span>
                     </div>
                 </div>
